# CMakeBaseLayout

src/: CMakeLists.txt  comments.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/installation/include/lib1/: lib1_export.h
src/installation/share/lib1/cmake/: lib1Config-noconfig.cmake  lib1Config.cmake
src/lib1/: CMakeLists.txt
src/lib1/include/lib1/: HelloWriter.h
src/lib1/src/: HelloWriter.cpp
